2002-07-28  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
 
	* src/rbgdkcolormap.c, src/rbgdkdnd.c, src/rbgdkdraw.c,
	src/rbgdkevent.c, src/rbgdkgc.c, src/rbgdkimage.c, src/rbgdkvisual.c,
	src/rbgdkwindow.c, src/rbgtkaccelgroup.c:
	  make the following classes be subclasses of GLib::GObject.
	    Gdk::Colormap, GdkDragContext, Gdk::Drawable, Gdk::GC, Gdk::Image,
	    Gdk::Visual, Gdk::Window, Gtk::AccelGroup,
	* src/rbgtkpaned.c: fixed cinfo.gtype

2002-07-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtknotebook.c: Remove Gtk::NotebookPage temporarily.
	* src/rbgtk.[ch]: Remove Gtk::Error, Gtk::RcStyle temporarily.

2002-07-27  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgdkevent.c, src/rbgdkwindow.c, src/rbgtkplug.c,
	src/rbgtksocket.c: suppress warnings which related to the
	representation of GdkNativeWindow.

2002-07-26  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgtkobject.c (gobj_destroy): follow Ruby/GLib's change of
	  internal data structure.

2002-07-20  Guillaume Pierronnet <moumar@netcourrier.com>

	* src/rbgtkpacker.c: Add file. Support Gtk::Packer.
	* src/rbgtk.c, rbgtk.h, rbgtkconst.c, rbgtkcontainer.c:
	Support Gtk::Packer.
	* src/rbgtkentry.c: Gtk::Entry.new() accept a "max_length"
	as optionnal argument.

2002-07-10  Alex Boussinet <dbug@wanadoo.fr>

	* src/rbgtksocket.c: Add Gtk::Socket#xwindow.
	* sample/t-gtkplug.rb, sample/t-gtksocket.rb:
	Add sample for Gtk::Socket, Gtk::Plug.

2002-07-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkim.c: Remove file.
	* src/rbgtk.h: Fix compile error for rbgdkfont.c(#ifdef GTK_DISABLE_DEPRECATED was wrong)
	* src/rbgdkcolormap.c: Remove Gdk::Colormap#alloc.

2002-07-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkvisual.c, src/rbgdkcolormap.c:File divide from rbgdkcolor.c.
	* src/rbgdkvisual.c, src/rbgdkcolormap.c, src/rbgdkdnd.c:
	Support GOBJ2RVAL/RVAL2GOBJ
	(Though Gdk::Visual, Gdk::Colormap, Gdk::DragContext is not descendant
	of Glib::GObject).