@@ -3,8 +3,8 @@
 
   rbgtkentry.c -
 
-  $Author: mutoh $
-  $Date: 2002/07/20 15:00:41 $
+  $Author: sakai $
+  $Date: 2002/07/30 05:37:54 $
 
   Copyright (C) 1998-2000 Yukihiro Matsumoto,
                           Daisuke Kanda,
@@ -82,12 +82,14 @@ void Init_gtk_entry()
 {
     static RGObjClassInfo cinfo;
 
-    gEntry = rb_define_class_under(mGtk, "Entry", gEditable);
+    gEntry = rb_define_class_under(mGtk, "Entry", gWidget);
     cinfo.klass = gEntry;
     cinfo.gtype = GTK_TYPE_ENTRY;
     cinfo.mark = 0;
     cinfo.free = 0;
     rbgtk_register_class(&cinfo);
+
+    rb_include_module(gEntry, gEditable);
 
     rb_define_method(gEntry, "initialize", entry_initialize, -1);
     rb_define_method(gEntry, "set_text", entry_set_text, 1);
