@@ -1,3 +1,8 @@
+2002-07-30  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
+
+	* src/rbgtkeditable.c: Gtk::Editable becomes a module
+	* src/rbgtkoldeditable.c: Add file, Support Gtk::OldEditable
+
 2002-07-28  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
  
 	* src/rbgdkcolormap.c, src/rbgdkdnd.c, src/rbgdkdraw.c,
